# vpn-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  iptables-udp.txt  iptables.txt  iptables.v4.saved  nftables.conf  server.priv  server.pub  setup_script.sh  users.txt
src/: bufferpool.rs  client.rs  diffie_hellman.rs  key_management.rs  main.rs  messages.rs  server.rs  server_bk.rs  server_workers_bad.rs  socket_wrapper.rs
src/messages/: authdata.rs  constants.rs  decrypted.rs  encrypted.rs  handshake.rs  handshake_response.rs  mod.rs  traits.rs  tunnel_settings.rs
