[package]
name = "vpn"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
crossbeam-queue = "0.3.12"
crossbeam = "0.8.4"

dashmap = "6.1.0"

chacha20poly1305 = "0.10.1"

rayon = "1.11.0"

x25519-dalek = "2.0.1"
ed25519-dalek = {version = "2.2.0", features = ["rand_core"]}
tun-rs = {version = "2.7.2", features = ["async"]}
tokio = { version = "1", features = ["full"] }
packet = "0.1.4"
env_logger = "0.11.8"
libc = "0.2.175"
nix = {version = "0.30.1", features = ["socket", "uio", "net"]}
bytes = "1.10.1"

bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.8"