[package]
name = "vpn"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"

[dependencies]
aead = { version = "0.5.2", features = ["bytes"] }

crossbeam-queue = "0.3.12"

dashmap = "6.1.0"

chacha20poly1305 = "0.10.1"

x25519-dalek = "2.0.1"
ed25519-dalek = {version = "2.2.0", features = ["rand_core"]}
tun-rs = {version = "2.7.2", features = ["async"]}
tokio = { version = "1", features = ["full"] }
packet = "0.1.4"
env_logger = "0.11.8"
libc = "0.2.175"
bytes = "1.10.1"

log = "0.4"

rand = "0.8"
hex = "0.4.3"
flume = "0.12.0"
